force-app/main/default/objects/Reviewer_Matrix__c/Reviewer_Matrix__c.object-meta.xml
<CustomObject>
    <label>Reviewer Matrix</label>
    <nameField>
        <label>Reviewer Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviewer Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>