force-app/main/default/objects/Reviewer_Matrix__c/fields/Approval_Process_Template__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Approval Process Template</label>
    <referenceTo>strk__Approval_Process_Template__c</referenceTo>
    <relationshipLabel>Reviewer Matrices</relationshipLabel>
    <relationshipName>Reviewer_Matrices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>