force-app/main/default/objects/Reviewer_Matrix__c/fields/Assignment_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Criteria__c</fullName>
    <description>Assignment criteria for assignment of approvals using a logical approach for assignment</description>
    <inlineHelpText>Criteria formatted like render criteria for activities per Sitetracker Documentation</inlineHelpText>
    <label>Assignment Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>