force-app/main/default/objects/Reviewer_Matrix__c/fields/Object_API__c.field-meta.xml
<CustomField>
    <fullName>Object_API__c</fullName>
    <label>Object API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project_Acceptance__c</fullName>
                <label>Project Acceptance</label>
            </value>
            <value>
                <fullName>Draft__c</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Unit_Economics__c</fullName>
                <label>Unit Economics</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>