force-app/main/default/objects/Reviewer_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Process_Template__c</columns>
    <columns>Assignment_Criteria__c</columns>
    <columns>Object_API__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>